samples/_failures_safe/1761168198_f3728e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1ce7591.c: In function ‘main’:
./samples/SAFE/__tmp_f1ce7591.c:166:9: error: expected declaration or statement at end of input
  166 |         }
      |         ^
./samples/SAFE/__tmp_f1ce7591.c:166:9: error: expected declaration or statement at end of input
